feat: created relume home repository

--- a/index.html
+++ b/index.html
@@ -1,13 +1,41 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./src/style/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./src/style/style.css" />
     <title>Document</title>
-</head>
-<body>
-
-</body>
+  </head>
+  <body>
+    <header>
+      <img
+        src="./src/assets/images/Company Logo.png"
+        alt="imagem do logo da empresa"
+      />
+      <nav>
+        <a href="Link one">
+          <p>Link one</p>
+        </a>
+        <a href="Link two">
+          <p>Link Two</p>
+        </a>
+        <a href="Link three">
+          <p>Link three</p>
+        </a>
+        <a href="">
+          <p>Link Four</p>
+          <img
+            src="./src/assets/images/Chevron Down.png"
+            alt="imagem da seta para baixo"
+          />
+        </a>
     
+      </nav>
+      <button>
+        <p>
+            Try it for free
+        </p>
+      </button>
+    </header>
+  </body>
 </html>
